[package]
name = "studipfs"
version = "0.1.0"
authors = ["tibequadorian <tibequadorian@posteo.de>"]
edition = "2018"

[dependencies]
libc = "0.2"
fuse = { git = "https://github.com/zargony/fuse-rs", version = "0.4.0-dev" }
minreq = { version = "2.1", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
