[package]
name = "studipfs"
version = "0.1.0"
authors = ["tibequadorian <tibequadorian@posteo.de>"]
edition = "2018"

[dependencies]
libc = "0.2"
fuser = "0.8"
minreq = { version = "2.4", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
ttl_cache = "0.5"
